<resources>
    <string name="app_name">MoviesManager</string>
    <string name="saveBt">Salvar Filme</string>
    <string name="urlImgTV">URL Capa</string>
    <string name="genres">Gênero</string>
    <string name="score">Nota</string>
    <string name="watched">Assistido</string>
    <string name="minutes">Duração</string>
    <string name="production">Produtora</string>
    <string name="releaseYears">Ano de lançamento</string>
    <string name="title">Titulo</string>
    <string name="salvar_filme">Salvar Filme</string>
    <string name="capa_do_filme">Capa do Filme</string>
    <string name="remover_filme">Remover Filme</string>
    <string name="editar_filmes">Editar Filmes</string>
    <string name="ordenar_alfabeto">ordenar_alfabeto</string>
    <string name="ordenar_numero">ordenar_numero</string>
    <string name="erro_ao_criar_titulo_j_existente">Erro ao criar, titulo já existente.</string>
</resources>