<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            android:textColor="@color/primary"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/eTtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/primary"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/watchedCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/primary"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watched"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textColor="@color/primary"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/eTStars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:minHeight="32dp"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/eTMinutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/primary"/>

        <Spinner
            android:id="@+id/editSpinnerGenre"
            android:entries="@array/genres"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="24sp"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releaseYears"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/eTReleaseYears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/primary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/eTProduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urlImgTV"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/primary"/>

        <EditText
            android:id="@+id/eTurlImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textUri"
            android:textColor="@color/primary" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>