<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="140dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgUrlIm"
                    android:layout_width="100dp"
                    android:layout_height="130dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/capa_do_filme" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/titleTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:singleLine="true"
                        android:layout_marginTop="4dp"
                        android:textSize="25sp" />
                    <TextView
                        android:id="@+id/genreTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genres"
                        android:layout_marginTop="4dp"
                        android:textSize="10sp"
                    />
                    <TextView
                        android:id="@+id/watchedTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/watched"

                        android:textSize="22sp"
                    />


                    <TextView
                        android:id="@+id/scoreTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/score"

                        android:textSize="18sp"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

</LinearLayout>